MOD:构建为分布式websocket

--- a/pf-consumer/src/main/resources/bootstrap.yml
+++ b/pf-consumer/src/main/resources/bootstrap.yml
@@ -5,3 +5,7 @@ spring:
         server-addr: nacos.stalary.com
         file-extension: yml
         shared-dataids: printlog.yml
+  profiles:
+    active: prod
+  application:
+    name: pf-consumer
