--- a/pf-gateway/src/main/resources/bootstrap.yml
+++ b/pf-gateway/src/main/resources/bootstrap.yml
@@ -6,3 +6,7 @@ spring:
         file-extension: yml
         shared-dataids: auth.yml,printlog.yml,gateway.yml
         refreshable-dataids: auth.yml,gateway.yml
+  profiles:
+    active: prod
+  application:
+    name: pf-gateway
