--- a/pf-consumer/pom.xml
+++ b/pf-consumer/pom.xml
@@ -41,6 +41,11 @@
             <version>0.2.1.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
