--- a/pf-consumer/src/main/resources/application.yml
+++ b/pf-consumer/src/main/resources/application.yml
@@ -21,4 +21,4 @@ com:
       order: true
       group: master
       auto: true
-      url: http://120.24.5.178:8001
+      url: lightmq.stalary.com
