--- a/pf-recruit/src/main/resources/bootstrap.yml
+++ b/pf-recruit/src/main/resources/bootstrap.yml
@@ -4,8 +4,8 @@ spring:
       config:
         server-addr: nacos.stalary.com
         file-extension: yml
-        shared-dataids: mysql.yml,printlog.yml,redis.yml
-        refreshable-dataids: mysql.yml,redis.yml
+        shared-dataids: mysql.yml,printlog.yml,redis.yml,lightmq.yml
+        refreshable-dataids: mysql.yml,redis.yml,lightmq.yml
   profiles:
     active: prod
   application:
