--- a/pf-recruit/pom.xml
+++ b/pf-recruit/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.stalary</groupId>
             <artifactId>lightmqclient</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>0.0.1</version>
             <exclusions><!-- 去掉默认配置 -->
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
